@@ -1,10 +1,11 @@
 package com.invocify.invoice.controller;
 
 
+
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
-
 import org.springframework.http.HttpStatus;
 import org.springframework.validation.ObjectError;
 import org.springframework.web.bind.MethodArgumentNotValidException;
@@ -20,7 +21,7 @@ public class CompanyControllerAdvice {
     @ExceptionHandler(MethodArgumentNotValidException.class)
     @ResponseStatus(HttpStatus.BAD_REQUEST)
     public List<String> handleNotFound(MethodArgumentNotValidException methodArgumentNotValidException) throws Exception {
-        List<String> result = methodArgumentNotValidException.getAllErrors().stream().map(ObjectError :: getDefaultMessage
+        List<String> result = methodArgumentNotValidException.getAllErrors().stream().map(ObjectError::getDefaultMessage
         ).collect(Collectors.toList());
         Collections.sort(result);
         return result;
@@ -30,7 +31,7 @@ public class CompanyControllerAdvice {
     @ExceptionHandler(InvalidCompanyException.class)
     @ResponseStatus(HttpStatus.BAD_REQUEST)
     public List<String> handleInvalidCompanyException(InvalidCompanyException invalidCompanyException) {
-        return List.of(invalidCompanyException.getMessage());
+        return Arrays.asList(invalidCompanyException.getMessage());
     }
 
 }
